<package>
  <name>sot_controller_wrapper</name>
  <version>0.1.0</version>
  <description>
  This package allows to wrap the controller associated to a robot
  in a ros node.
  </description>
  <author>fkeith</author>
  <maintainer email="keith@lirmm.fr">Francois Keith</maintainer>
  <license>BSD</license>
  <url>...</url>
  
  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_graph_bridge_msgs</build_depend>
  <build_depend>sot-core</build_depend>
  <run_depend>sot-core</run_depend>

</package>


